<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".AdminPanel">

    <Button
        android:id="@+id/btnView"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="130dp"
        android:text="@string/btnViewUsers"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMessageAdminPage" />

    <Button
        android:id="@+id/btnViewBooks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="125dp"
        android:text="@string/btnViewBooks"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDelUser" />

    <Button
        android:id="@+id/btnDelUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="132dp"
        android:text="@string/DeleteUsers"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnView" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="48dp"
        android:text="@string/btnLogOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMessageReq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="55dp"
        android:text="@string/ViewRequests"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/txtMessageAdminPage"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="43dp"
        android:background="#1976D2"
        android:text="@string/adminPanelMessage"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="94dp"
        android:text="@string/btnDelBooks"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewBooks" />

    <Button
        android:id="@+id/btnReadingHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:text="@string/btnReadingHistory"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMessageReq" />

</androidx.constraintlayout.widget.ConstraintLayout>