<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".BorrowPage">

    <EditText
        android:id="@+id/txtViewPostal"
        android:layout_width="242dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="388dp"
        android:ems="10"
        android:hint="@string/txtPostalCode"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="388dp"
        android:onClick="Find"
        android:text="@string/btnFindBookByPostalCode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageFindBooks"
        android:layout_width="374dp"
        android:layout_height="164dp"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/btnFind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/findbooks" />
</androidx.constraintlayout.widget.ConstraintLayout>